--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,38 @@ body {
     background-color: teal;
     transform: rotate(180deg);
   } */
+
+  /* body {
+    font-family: sans-serif;
+    line-height: 1.5;
+  }
+  
+  input {
+    padding: 8px;
+    font-family: inherit;
+  }
+  
+  label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 8px;
+  } */
+
+  body {
+    font-family: sans-serif;
+    line-height: 1.5;
+  }
+  
+  input {
+    padding: 8px;
+    font-family: inherit;
+  }
+  
+  label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 8px;
+  }
+  
+  
+  
