--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ body {
     flex-direction: column;
     margin-bottom: 8px;
   } */
-
+/* 
   body {
     font-family: sans-serif;
     line-height: 1.5;
@@ -67,5 +67,10 @@ body {
     margin-bottom: 8px;
   }
   
+   */
   
-  
+   body {
+    font-family: sans-serif;
+    line-height: 1.5;
+  }
+
