--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ body {
     font-family: sans-serif;
     line-height: 1.5;
   } */
-
+/* 
   body {
     font-family: sans-serif;
     line-height: 1.5;
@@ -93,5 +93,18 @@ body {
   
   textarea {
     resize: none;
-  }
+  } */
 
+  body {
+    font-family: sans-serif;
+    line-height: 1.5;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 4px;
+  }
+  
+  select {
+    font-size: 16px;
+  }
