--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ body {
   textarea {
     resize: none;
   } */
-
+/* 
   body {
     font-family: sans-serif;
     line-height: 1.5;
@@ -106,5 +106,22 @@ body {
   }
   
   select {
+    font-size: 16px;
+  } */
+
+
+
+  body {
+    font-family: sans-serif;
+    line-height: 1.5;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 4px;
+  }
+  
+  input {
+    padding: 8px;
     font-size: 16px;
   }
