--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ body {
 
 
 
-  body {
+  /* body {
     font-family: sans-serif;
     line-height: 1.5;
   }
@@ -124,4 +124,13 @@ body {
   input {
     padding: 8px;
     font-size: 16px;
+  } */
+
+  body {
+    font-family: sans-serif;
+    line-height: 1.5;
+  }
+  
+  label {
+    display: block;
   }
