current.js in correct folder
attach   js-speaker-form as
script in index

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ body {
   } */
 
 
-/* 
+
   body {
     font-family: sans-serif;
     line-height: 1.5;
@@ -168,4 +168,4 @@ body {
   button:hover,
   button:focus {
     background-color: #1976d2;
-  } */
+  }
